@@ -116,8 +116,7 @@ bool CGUIWindowVideoGenre::GetDirectory(const CStdString &strDirectory, CFileIte
           pItem->SetThumbnailImage(strThumb);
         pItem->m_fRating = movie.m_fRating;
         pItem->m_stTime.wYear = movie.m_iYear;
-        if (!movie.m_bWatched)
-          pItem->SetOverlayImage(CGUIListItem::ICON_OVERLAY_UNWATCHED);
+        pItem->SetOverlayImage(CGUIListItem::ICON_OVERLAY_UNWATCHED,movie.m_bWatched);
         items.Add(pItem);
       }
     }
